Move serializers package out of objectmapping subpackage